# lora-intent-clf

./: .gitignore  README.md  machine.env.example  pyproject.toml  requirements-dev.txt  requirements.txt  uv.toml
configs/: export_lora.yaml  inference.yaml  inference_lora.yaml  predict_lora.yaml  train_lora_sft.yaml
configs/deepspeed/: ds_z3_offload_config.json
data/: dataset_info.json  test.json  train.json  val.json
scripts/: common.sh  diagnose_env.py  run_evaluate.sh  run_inference.sh  run_tensorboard.sh  run_train_and_export.sh  setup_env.sh  setup_github.sh  train_background.sh
src/: __init__.py  compat.py  config.py  evaluate.py  export_model.py  inference.py  train.py
