[project]
name = "lora-intent-clf"
version = "0.1.0"
description = "LoRA 微调意图识别分类项目 — 支持 LlamaFactory YAML 和 Python 脚本双模式"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "tensorboard>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100
